--- a/gb/news2007_3.md
+++ b/gb/news2007_3.md
@@ -1,4 +1,8 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p> <a href="https://github.com/brkhkd3127/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/Dirkvokm/vdwl/raw/master/public/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/sarai3te/vdhG75Ez1eTyeZN/raw/master/public/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/Edmundegh/vdYongHeng-360p/raw/master/public/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/Domeniccqa/vdLijianhui-200804-720/raw/master/public/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/Dominic17763/vddmt/raw/master/public/dmt.webm" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/Dinobybt/vdszt/raw/master/public/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/Dominickryj/vdUc6y/raw/master/public/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/Dixonweat/vd425/raw/master/public/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/Domeniceg2/vdlin-720p/raw/master/public/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/Earnesteg6/vdwnrl/raw/master/public/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/Domenicthks/vdzjmd1_19/raw/master/public/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/Domenicrte/vdmtdwh/raw/master/public/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/Domenicgyt/vd9p/raw/master/public/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/Dodiegin6/vd1400forge-1210/raw/master/public/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/Dirkchel/vd3-JTT_CN_MH-360p/raw/master/public/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/Donadfilb/vd5-YiSu_MH-360p/raw/master/public/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/Dominivwf6/vd1-Xuezhongmei_MH-360p/raw/master/public/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/Doloresank/vdguanguimin/raw/master/public/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/Dongyril/vdhuangxiaomin-tuidang/raw/master/public/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/Dinorahdf7/vdwm/raw/master/public/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/Diondarh/vdqh/raw/master/public/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr><tr><td width="742"><h3><p><strong>文化艺术</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://gitlab.com/Domenicgyt/vd9p/raw/master/public/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://gitlab.com/Domenicthks/vdzjmd1_19/raw/master/public/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"></a><br><a href="https://gitlab.com/Dirkchel/vd3-JTT_CN_MH-360p/raw/master/public/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://gitlab.com/Dirkvokm/vdwl/raw/master/public/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://gitlab.com/Dominickdfw/vdtzrs/raw/master/public/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"></a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://gitlab.com/Dodiegin6/vd1400forge-1210/raw/master/public/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"></a><br><a href="https://gitlab.com/Dirkgj9/vdC1WZ_mj/raw/master/public/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://gitlab.com/Diondarh/vdqh/raw/master/public/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"></a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://gitlab.com/Doloresank/vdguanguimin/raw/master/public/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/brkhkd3127/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/brkhkd3127/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/10/n13225261.md#1" target="_blank">【未解之谜】轰动日本 甲府UFO事件</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/10/n13225261.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13225269-1200x800-1-150x120.jpg" align ="left"></a>超惊悚！外星人突现身后，拍肩打招呼？！日本小学生近距离接触UFO，奇特经历获得多方作证；UFO降临前苏联公园吓坏孩子们，一名小男孩被神秘武器击中丧失记忆。他们都看到了什么？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月13日 7:00 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/8/22/n13179302.md#1" target="_blank">僧侣苦化缘修大寺  转生后开启前世记忆续宏愿</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/8/22/n13179302.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13179423-0927d35a7a01108a179d92a5ca3e978e-150x120.jpg" align ="left"></a>中国传统建筑往往讲究坐北朝南，而亳州第一伽蓝白衣庵的山门却朝向西北方，形成一与众不同的格局，这是为什么呢？原来这与一段轮回转生奇事有关连。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月13日 4:41 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/11/n13225548.md#1" target="_blank">台湾乡村石墙之美</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/11/n13225548.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13225579-29e3cde17c46af4e1585fe08f7cf5e1b-150x120.jpg" align ="left"></a>我的家乡在台湾中北部的一个海岸边，也许闽南人来台较早，占据靠海、生存条件比较好的区域。因此我们村子离海很近，那真叫水秀山明，从我家步行到海边只要5分钟路程。然而我家乡没有形成渔村的条件，主要还是以农耕为主。田埂交错、水渠蜿蜒、田垅畦畦、稻浪翻飞。宽阔的马路上久久才有车辆驶过，发出的躁音一点也不刺耳，反倒让人觉得亲切。.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月13日 3:36 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/8/n13219547.md#1" target="_blank">暗战赤龙（54）启动内线</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/8/n13219547.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/07/id13074103-3581e100e7645b217fe3ddcaf4e33ab4-150x120.jpg" align ="left"></a>这个世界最怕的不是眼前的危险，而是未知的危险，不知来自何方。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月13日 3:00 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/12/n13228009.md#1" target="_blank">浮生行吟：另找方法</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/12/n13228009.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2017/09/20170921-shouhuihsu-woman01-150x120.jpg" align ="left"></a>利用“逆向思维”，背逆人们的习惯路线去思维，跳脱常规、打破框架，透过与常识相反的思考，找出新创意的切入点，往往有超乎想像的效果！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月12日 9:15 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/9/n13220936.md#1" target="_blank">【蒙古帝后】此生愿（上）</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/9/n13220936.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/04/genghis-khan-2-150x120.jpg" align ="left"></a>从懂事起，合答安心中就有一个愿望，蒙古草原上能够出一位大英雄，统一部落，带领属民，过着和平、自由的日子。其实，她在最青涩的少女时代，“邂逅”了落魄的贵族少年铁木真，从那以后，她的心里，就再也装不下第二个英雄。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月12日 5:49 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/7/n13217118.md#1" target="_blank">千古奇书《西游记》</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/7/n13217118.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/07/id13129568-shen-yun-puzzle-monkey-king-2nd_600x_5dde4bc1-01da-4d36-9d22-cd19dc0365c7_grande-150x120.png" align ="left"></a>《西游记》植根于中国传统文化中博大精深的修炼文化，书中的情节、人物、对话、诗词，全都大有深意，读者不应视为等闲，轻轻放过。神韵艺术团把一个又一个西游故事搬上五大洲的舞台，在给观众带来欢笑的同时，也在向人们普及修炼文化的内涵。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月12日 5:06 PM			</td></tr>
@@ -16,10 +20,8 @@
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/6/4/n12997521.md#1" target="_blank">【金色种子】台湾公教机关的炼功潮</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/6/4/n12997521.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12934664-golden-seeds-top-image-150x120.jpg" align ="left"></a>一九九九年时任海关副总的傅仁雄与总局长的司机聊天，得知对方修炼法轮功，他好奇的问：“法轮功是什么？你炼看看。”只见这名司机随地盘坐，缓慢的抬起双手打起手印，这肃穆而祥和的画面令傅仁雄印象深刻。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月10日 9:37 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/8/29/n13196137.md#1" target="_blank">无神论——人类面临的最危险骗局</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/8/29/n13196137.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13196160-shutterstock_1431674009-150x120.jpg" align ="left"></a>在人类历史长河里，主体文化都是神传文化体系，直到19世纪马克思主义也就是共产主义的诞生，有体系的无神论才正式在世间出现。神传文化和无神论在世间的对立，其实就是宇宙中神对人类的救赎计划和魔鬼对人类的毁灭骗局的最终表现。“信神还是信魔”、“救赎还是毁灭”，是贯穿人类文化和历史的一条根本主线。这是各种宗教、民间传说所提及的人.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月10日 6:00 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/9/n13222419.md#1" target="_blank">七律：白露（外一首）</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/9/n13222419.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2018/11/shutterstock_306671300-150x120.jpg" align ="left"></a>一夜凝珠草白头， 气温骤降若深秋。 寒风瑟瑟蒹葭舞， 黄叶飘飘百鸟啁。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月10日 12:12 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/9/n13220766.md#1" target="_blank">史上一只黑天鹅预告一场巨变  五行学说解玄奇</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/9/n13220766.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13220842-81a72e91dd732666a321a8bc00ef16ca-150x120.jpg" align ="left"></a>永嘉元年，晋朝首都洛阳步广里，发生了难以预测的地陷，此际，一只黑天鹅出现，冲天飞去。这只不寻常的黑天鹅、冲天而飞的姿态和出现之地，被深懂得五行学说的人视为一种异象的预言，预告了什么巨变呢？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月09日 8:12 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/6/n13212988.md#1" target="_blank">【涛哥侃封神】第六十回  马元下山助殷洪</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/6/n13212988.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13213065-190521025345100093-150x120.jpg" align ="left"></a>第六十回“马元下山助殷洪”，围绕着苏护，仙界下来了很多人，马元就是另外一个稀奇古怪的人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月09日 7:07 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/6/n13212942.md#1" target="_blank">天堂梦（159）</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/6/n13212942.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12921185-Heaven--150x120.jpg" align ="left"></a>联合国军司令麦克亚瑟，还向杜鲁门提议用原子弹摧毁中共沿海大城市，趁机将中共消灭。蒋介石获得此情报后再三向美国政府表态，反对使用原子武器伤害国人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月09日 3:00 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/8/n13220263.md#1" target="_blank">【古韵流芳】晏殊《浣溪沙》花落燕归来的理趣</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/8/n13220263.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13220275-20-WZ-150x120.jpg" align ="left"></a>晏殊的《浣溪沙》，描写的是因宴会上所见所感而阐发的幽思，词句精美、情调闲雅，也像是一位“要眇宜修”的佳人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月09日 4:53 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/13/n13230076.md#1" target="_blank">台湾古典诗：过沟火灯夜巡（二）</a><br></h3>人文殊胜雅风存，六月宏开祭典敦， 灿烂火灯辉净域，庄严法会渡幽魂；......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月13日 7:36 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/12/n13228326.md#1" target="_blank">七律：阿富汗（外一首）</a><br></h3>王师大夏陷坟场， 撤退无方似败亡。 帝国蒙羞遗笑柄， 拜登闯祸酿灾殃。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月13日 12:17 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/12/n13228328.md#1" target="_blank">乌鸦与黑天鹅</a><br></h3> 落日乌啼户， 人家必有殃。 责行归大善， 弃恶可呈祥！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月13日 12:17 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/11/n13226691.md#1" target="_blank">诗歌：911恐袭二十年有感</a><br></h3>巍峨大厦化灰烟，
 反恐缠绵二十年。
@@ -30,10 +32,5 @@
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/10/n13224903.md#1" target="_blank">满庭芳?末劫乱世</a><br></h3>末劫红尘，万魔出世，甚嚣祸害全球。 正邪相敌，值决战关头。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月11日 12:10 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/10/n13224896.md#1" target="_blank">中元夜</a><br></h3>夜降中元月色昏， 青烟缭绕纸钱焚。 无言悼念思慈母， 往事萦心感德恩。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月10日 11:07 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/9/n13222420.md#1" target="_blank">七绝：陌上秋</a><br></h3>陌上秋来不看花， 秋风秋雨恋桑麻。 有缘莫诉离别苦， 总有夕阳伴落霞！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月10日 12:10 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/9/n13222421.md#1" target="_blank">一七令?真才</a><br></h3> 才。 天赋，天才。 勤学苦，炼英才。 身负使命，天生我才。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月09日 10:57 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/4/n13210461.md#1" target="_blank">诗歌：秋雨寒</a><br></h3>未到黄昏天已昏，
-满天弥漫墨铅云。
-远山连雨藏迷雾，
-近水生烟隐浪痕。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月09日 12:10 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/news2007_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/news2007.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/news2007_4.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/jtmmat3416/djy/blob/master/gb/news2007_3.md#1<br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/news2007_3.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/jtmmat3416/djy/blob/master/gb/news2007_3.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news2007_3.htm">https://www.epochtimes.com/gb/news2007_3.htm</a>    （国内需<a href="https://github.com/jtmmat3416/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
